Started and updated project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,25 @@
     <link rel="stylesheet" href="styles.css">
     <title>Product Landing Page | FCC Project</title>
 </head>
+
 <body>
-    
+    <header id="header">
+        <div class="header-logo">
+            <img src="/assets/coffee.png" alt="coffee-logo" id="header-img">
+            <h1 class="nav-logo">Ultimate Coffee Shop</h1>
+        </div>
+        <nav id="nav-bar">
+            <ul class="nav-items">
+                <li><a href="#" class="nav-link">Why Coffee?</a></li>
+                <li><a href="#" class="nav-link">How to make Coffee</a></li>
+                <li><a href="#" class="nav-link">Get it Now!</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="hero">
+        <h1>Stay updated for discounts!</h1>
+    </section>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
+
 </html>
