--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <nav id="nav-bar">
             <ul class="nav-items">
-                <li><a href="#" class="nav-link">Why Coffee?</a></li>
-                <li><a href="#" class="nav-link">How to make Coffee</a></li>
-                <li><a href="#" class="nav-link">Get it Now!</a></li>
+                <li><a href="#WhyCoffee" class="nav-link">Why Coffee?</a></li>
+                <li><a href="#HTMC" class="nav-link">How to make Coffee</a></li>
+                <li><a href="#pricing-model" class="nav-link">Get it Now!</a></li>
             </ul>
         </nav>
     </header>
@@ -30,6 +30,73 @@
             <input id="submit" type="submit" value="Access Now!">
         </form>
     </section>
+    <section class="coffee-benefits" id="WhyCoffee">
+        <div class="coffee-benefits-header">Benefits of Coffee</div>
+        <ul class="benefits-of-coffee">
+            <li class="benefits-of-coffee-items">
+                <img class="benefits-of-coffee-image" src="assets/energetic.png" alt="man giving thumbs up">
+                <p class="benefits-of-coffee-des">Makes you more energtic</p>
+            </li>
+            <li class="benefits-of-coffee-items">
+                <img class="benefits-of-coffee-image" src="assets/Heart-health.jpg" alt="coffee heart">
+                <p class="benefits-of-coffee-des">Supports heart health</p>
+            </li>
+            <li class="benefits-of-coffee-items">
+                <img class="benefits-of-coffee-image" src="assets/Long-life.jpg" alt="old man reading newspaper">
+                <p class="benefits-of-coffee-des">Increases longevity</p>
+            </li>
+        </ul>
+    </section>
+    <section class="how-to-coffee" id="HTMC">
+        <h1 class="htc-title">How to Make Coffee</h1>
+        <iframe id="video" width="752" height="423" src="https://www.youtube.com/embed/YVOrDgtDYQ4"
+            title="How To Make the Perfect Coffee" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </section>
+    <section id="pricing-model">
+        <h1 class="pm-title">Get it Now!</h1>
+        <div class="pricing-wrapper">
+            <div class="pm-card">
+                <h1 class="pm-card-title">Arabica</h1>
+                <h1 class="pm-price">$24.99</h1>
+                <ul class="pm-des">
+                    <li>Java chicory, black doppio</li>
+                    <li>Wings blue mountain turkish</li>
+                    <li>Roast cream mocha</li>
+                    <li>Blue mountain doppio black</li>
+                </ul>
+                <button class="pm-select">Select</button>
+            </div>
+            <div class="pm-card">
+                <h1 class="pm-card-title">Robusta</h1>
+                <h1 class="pm-price">$34.99</h1>
+                <ul class="pm-des">
+                    <li>Java chicory, black doppio</li>
+                    <li>Wings blue mountain turkish</li>
+                    <li>Roast cream mocha</li>
+                    <li>Blue mountain doppio black</li>
+                </ul>
+                <button class="pm-select">Select</button>
+            </div>
+            <div class="pm-card">
+                <h1 class="pm-card-title">Excelsa</h1>
+                <h1 class="pm-price">$29.99</h1>
+                <ul class="pm-des">
+                    <li>Java chicory, black doppio</li>
+                    <li>Wings blue mountain turkish</li>
+                    <li>Roast cream mocha</li>
+                    <li>Blue mountain doppio black</li>
+                </ul>
+                <button class="pm-select">Select</button>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-text">
+            Copyleft 🄯 by Vedant Cholkar
+        </div>
+    </footer>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
